# Python_Crash_Course

./: full_name.py  name.py  pyproject.toml  string.py
Chapter_1/: hello_world.py  hello_world_2.py  message_exercise_1.py  multi_message_exercise.py
